Fixed spacing bug

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -642,7 +642,7 @@ float: none;
 	width: 400px;
 	clear: none;
 	margin-top: 0px;
-	line-height:2.5em;
+	line-height:1.5em;
 }
 
 
